prevent overlap in 'menu' section

--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,12 @@ button.menu-button {
     margin-right: 20px;
     border-radius: 15px;
     object-fit: cover;
+    height: 100px;
+    width: 100px;
+}
+
+.menu-item h3 {
+    line-height: 0.7;
 }
 
 @media(min-width: 1000px) {
